tests/explicit-nulls/neg/i21629_override/S.scala
// Test that Nullable annotations are working in Java files.

import javax.annotation.J

class S extends J {
  override def p(s: String): String = ??? // error
}
